# bristol-api-client

./: LICENSE  README.md  bristol-api-client.cabal  bristol-api.cabal  stack.yaml
app/: Main.hs
src/: ApiResponse.hs  BristolApi.hs  BristolTransportApi.hs  ImportSources.hs
src/BristolTransportApi/: ImportSources.hs  PlacePointType.hs  ResponseBody.hs  TransitStops.hs  VehicleType.hs
src/BristolTransportApi/Internal/: EnumTable.hs
