name:                bristol-api-client
version:             0.1.0.0
synopsis:            Client library for the Bristol Transport API
description:         Please see README.md
homepage:            https://github.com/ThomWright/bristol-api-client
license:             BSD3
license-file:        LICENSE
author:              Thom Wright
maintainer:          git@thomwright.co.uk
copyright:           2016 Thom Wright
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BristolTransportApi
                     , BristolTransportApi.ImportSources
                     , BristolTransportApi.ResponseBody
                     , BristolTransportApi.TransitStops
                     , BristolTransportApi.VehicleType
                     , BristolTransportApi.PlacePointType
  other-modules:       BristolTransportApi.Internal.EnumTable
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client
                     , scientific
                     , servant == 0.6
                     , servant-client == 0.6
                     , text
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable bristol-api-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bristol-api-client
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , http-client
                     , http-client-tls
                     , servant == 0.6
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite bristol-api-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bristol-api-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ThomWright/bristol-api-client
